--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
 					<img src="images/portfolio/sysecproj (1).jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 						<div class="overlay-box">
 						<div class="overlay-inner">
+								<a class="overlay-content" href="portfolioPages/awad.html">
+								<h5 class="mb-0">Advanced Web Application Development Project</h5>
+								<p>NYP - Year 2 Project</p>
+								</a>
+							</div> 
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;InformationTechnology&quot;]">
+				<div class="position-relative inner-box" >
+					<div class="image position-relative ">
+					<img src="images/portfolio/sysecproj (1).jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+						<div class="overlay-box">
+						<div class="overlay-inner">
 								<a class="overlay-content" href="portfolioPages/sysecproject.html">
 								<h5 class="mb-0">System Security Project</h5>
 								<p>NYP - Year 2 Project</p>
