--- a/portfolioPages/awad.html
+++ b/portfolioPages/awad.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="text-center">
-          <h1 class="text-capitalize mb-0 text-lg">Data Structures & Algorithms (DSA) Project</h1>
+          <h1 class="text-capitalize mb-0 text-lg">Advanced Web Application Development Project</h1>
         </div>
       </div>
     </div>
@@ -78,7 +78,19 @@
 				<div id="projectCarousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="../images/portfolio/dsa.png" alt="" class="img-fluid w-100">
+							<img src="../images/portfolio/appdevproject (5).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/appdevproject (4).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/appdevproject (1).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/appdevproject (2).png" alt="" class="img-fluid w-100">
+						</div>
+						<div class="carousel-item">
+							<img src="../images/portfolio/appdevproject (3).png" alt="" class="img-fluid w-100">
 						</div>
 						<!-- Add additional slides with images as needed -->
 					</div>
@@ -97,9 +109,9 @@
 			<div class="col-lg-6">
 				<div class="project-info">
 					<h3 class="mb-4">Nanyang Polytechnic - Year 2 Project</h3>
-					<p>This project was the first time that I would learn about Algorithms and more specially sorting and searching algorithms. This project helped me to understand the very fundamentals of very common and useful functionalities such as the search bar, sorting options and etc.</p>
+					<p>This project was .</p>
 
-					<p>Full Algorithm List: BubbleSort, SelectionSort, InsertionSort, SequentialSort, BinarySearch and QuickSort.</p>
+					<p>Full Functionality List: Vehicle Shopping Cart, Car & Accessory Inventory, User & Admin Account Management, Feedback & Review, Car Services and Reward Points.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
@@ -113,7 +125,7 @@
 								<p>2022</p>
 							</div>
 							<div class="mt-4">
-								<a href="https://github.com/brandonpxw/DSA-Project" target="_blank" class="btn btn-main btn-small">View project</a>
+								<a href="https://github.com/brandonpxw/Advanced-Web-Application-Development-Project" target="_blank" class="btn btn-main btn-small">View project</a>
 							</div>
 						</div>
 
